# cosmos

./: .cmake-format.json  .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  README.md  TODO  doxygen.sh  ktool
src/boot/x86-64/: CMakeLists.txt  Makefile  boot.asm  boot2.asm  boot3.asm
src/img/initrd/: CMakeLists.txt
src/kernel/: CMakeLists.txt  Makefile  cosmos.c  cosmos.ld  cosmos_logical_devs.c  cosmos_logical_devs.h  cosmos_logical_objs.c  cosmos_logical_objs.h  driver_helpers.c  iwyu_mapping.imp  map_check.sh  subsystems.h  types.h
src/kernel/api/: api_object.c  api_object.h
src/kernel/api/interfaces/: enumerable.h  generic.h  interfaces.h
src/kernel/api/syscap/: interfaces.h
src/kernel/cmake/: cflags.cmake  load_platform.cmake  nasmflags.cmake  platform_sources.cmake
src/kernel/cmake/arm/: flags.cmake
src/kernel/dev/: dev.h
src/kernel/dev/arm/pl101/: pl101.c  pl101.h
src/kernel/dev/block/ata/: ata.c  ata_controller.c  ata_controller.h  ata_disk.c  ata_dma.c  ata_dma.h  ata_identity.c  ata_identity.h  ata_util.c  (+1 more)
src/kernel/dev/timing/: hpet.c  hpet.h
src/kernel/sys/acpi/: acpi.c  xsdt.c  xsdt.h
src/kernel/sys/asm/: gdt.asm  gdt.h  io.c  misc.c  misc.h  msr.c  msr.h
src/kernel/sys/block/: block.c  block.h
src/kernel/sys/debug/: assert.h  debug.c
src/kernel/sys/deviceapi/: deviceapi_bga.h  deviceapi_block.h  deviceapi_ethernet.h  deviceapi_filesystem.h  deviceapi_kernelmap.h
src/kernel/sys/devicemgr/: device.c  device.h  devicemgr.c  deviceregistry.c  deviceregistry.h  devicetypes.c  devicetypes.h
src/kernel/sys/elf/: elf.c  elf.h
src/kernel/sys/fs/: file_util.c  file_util.h  fs_facade.c  fs_facade.h  fs_helper.c  fs_helper.h
src/kernel/sys/gui/: bdf.c  bdf.h  bmp.c  bmp.h  gui.c  gui.h  props.c  props.h  psf.c  psf.h  window.c  window.h
src/kernel/sys/init/: init.c  init.h
src/kernel/sys/interrupt_router/: interrupt_router.c  interrupt_router.h
src/kernel/sys/iobuffers/: iobuffers.c  iobuffers.h
src/kernel/sys/kmalloc/: kmalloc.c
src/kernel/sys/kprintf/: kprintf.c
src/kernel/sys/linkage/: linkage.c
src/kernel/sys/loader/: elf.c  elf.h  loader.c  loader.h
src/kernel/sys/objectinterface/: objectinterface_arp.h  objectinterface_bda.h  objectinterface_bga.h  objectinterface_block.h  objectinterface_cmos.h  objectinterface_console.h  objectinterface_cpu.h  objectinterface_dsp.h  objectinterface_ethernet.h  objectinterface_filesystem.h  objectinterface_floppy.h  objectinterface_icmp.h  objectinterface_ip.h  objectinterface_kernelmap.h  objectinterface_keyboard.h  objectinterface_mouse.h  objectinterface_nic.h  objectinterface_null.h  objectinterface_parallel.h  objectinterface_part_table.h  objectinterface_pit.h  objectinterface_rand.h  objectinterface_rtc.h  objectinterface_serial.h  objectinterface_speaker.h  objectinterface_swap.h  objectinterface_tcp.h  objectinterface_tick.h  objectinterface_udp.h  objectinterface_vga.h
src/kernel/sys/objectmgr/: object.c  object.h  objectmgr.c  objectmgr.h  objectregistry.c  objectregistry.h  objecttypes.c  objecttypes.h
src/kernel/sys/objects/: object.c  object_executable.c  object_init.c  object_kernel_work.c  object_presentation.c  object_process.c  object_table.c  object_task.c  objects.h
src/kernel/sys/objecttype/: objecttype_arp.h  objecttype_bda.h  objecttype_bga.h  objecttype_block.h  objecttype_cmos.h  objecttype_console.h  objecttype_cpu.h  objecttype_dsp.h  objecttype_ethernet.h  objecttype_filesystem.h  objecttype_floppy.h  objecttype_icmp.h  objecttype_ip.h  objecttype_kernelmap.h  objecttype_keyboard.h  objecttype_mouse.h  objecttype_nic.h  objecttype_null.h  objecttype_parallel.h  objecttype_part_table.h  objecttype_pit.h  objecttype_rand.h  objecttype_rtc.h  objecttype_serial.h  objecttype_speaker.h  objecttype_swap.h  objecttype_tcp.h  objecttype_tick.h  objecttype_udp.h  objecttype_vga.h
src/kernel/sys/panic/: panic.c  panic.h
src/kernel/sys/proc/: kernel_idle.c  pid.c  proc.h  proc_create.c  proc_info.c  proc_init.c  proc_load.c  proc_table.c
src/kernel/sys/sched/: sched.c  sched.h  sched_add.c  sched_init.c  sched_remove.c  sched_terminate.c  task_select.c  task_switch.c  tasklist.c
src/kernel/sys/sleep/: sleep.c
src/kernel/sys/string/: mem.c  mem.h  split_string.c  split_string.h  string.c  string.h
src/kernel/sys/sync/: spinlock.c  sync.h
src/kernel/sys/syscall/: exit.c  syscall.c  syscall.h  syscall_dispatcher.c  syscall_dispatcher.h  syscall_router.c  syscall_router.h  syscall_sleep.c  syscalls.c  syscalls.h  syscalls_bga.c  syscalls_bga.h  syscalls_console.c  syscalls_console.h  syscalls_filesystem.c  syscalls_filesystem.h  syscalls_keyboard.c  syscalls_keyboard.h  syscalls_memory.c  syscalls_memory.h  syscalls_objectmgr.c  syscalls_objectmgr.h  syscalls_process.c  syscalls_process.h  syscalls_serial.c  syscalls_serial.h
src/kernel/sys/timing/: system_sleep.c  timerapi.h  timing.c  timing.h
src/kernel/sys/video/: bmp.c  bmp.h  canvas.c  canvas.h  psf.c  psf.h  rgb.c  rgb.h  tga.c  tga.h  video_util.c  video_util.h
src/kernel/tests/: tests.c  tests.h
src/kernel/tests/dev/: test_acpi.c  test_arp.c  test_ata.c  test_bda.c  test_blockdevice.c  test_blockdevice.h  test_cpu.c  test_display.c  test_floppy.c  test_kernelmap.c  test_null.c  test_parallel.c  test_pit.c  test_ramdisk.c  test_rand.c  test_rtc.c  test_rtl8139.c  test_sb16.c  test_serial.c  test_serial_console.c  test_smbios.c  test_speaker.c  test_vblock.c  test_vga_console.c  test_virtio_virtqueue.c  test_virtio_vnic.c
src/kernel/tests/fs/: ramdisk_helper.c  ramdisk_helper.h  test_cfs.c  test_cpm.c  test_devfs.c  test_devfs.h  test_fat.c  test_gpt.c  test_initrd.c  test_mbr.c  test_sfs.c  test_swap.c  test_tfs.c  test_vfs.c  test_voh.c  test_voh.h
src/kernel/tests/sys/: test_bitmap.c  test_debug.c  test_dynabuffer.c  test_dynabuffer.h  test_init_loader.c  test_init_loader.h  test_iobuffers.c  test_linkedlist.c  test_malloc.c  test_mm.c  test_ntree.c  test_objects.c  test_objects.h  test_props.c  test_props.h  test_ringbuffer.c  test_string.c  test_trap.c  test_tree.c
(+1450 files in other folders)
